# DyLP

./: .gitattributes  Dependencies  Externals  INSTALL  Makefile.am  Makefile.in  NEWS  README  README.md  configure  configure.ac  dylp-uninstalled.pc.in  dylp.pc.in
.coin-or/: Dependencies  config.yml  projDesc.xml
.github/workflows/: linux-ci.yml  windows-ci.yml
1.3/: Externals
1.3/DyLP/: Makefile.am
DyLP/: Makefile.am  Makefile.in  NEWS  configure  configure.ac  dylp-uninstalled.pc.in  dylp.pc.in  fpchecks.c
DyLP/MSVisualStudio/v10/: Dylp.sln
DyLP/MSVisualStudio/v10/DylpUnitTest/: DylpUnitTest.vcxproj
DyLP/MSVisualStudio/v10/OsiDylpUnitTest/: OsiDylpUnitTest.vcxproj
DyLP/MSVisualStudio/v10/libDylp/: libDylp.vcxproj
DyLP/MSVisualStudio/v10/libDylpStdLib/: libDylpStdLib.vcxproj
DyLP/MSVisualStudio/v10/libOsiDylp/: libOsiDylp.vcxproj
DyLP/MSVisualStudio/v10alt/: Dylp.sln  genDefForDylp.ps1  libDylp.vcxproj  libDylpStdLib.vcxproj
DyLP/MSVisualStudio/v9/: Dylp.sln  DylpLib.aps  DylpLib.def  DylpUnitTest.vcproj  OsiDylpUnitTest.vcproj  UnitTest.vcproj  coinutils_props.vsprops  libDylp.def  libDylp.vcproj  libDylpStdLib.ncb  libDylpStdLib.vcproj  libOsiDylp.vcproj  osi_props.vsprops
DyLP/MSVisualStudio/v9/DylpUnitTest/: DylpUnitTest.vcproj
DyLP/MSVisualStudio/v9/OsiDylpUnitTest/: OsiDylpUnitTest.vcproj
DyLP/MSVisualStudio/v9/libDylp/: libDylp.vcproj
DyLP/MSVisualStudio/v9/libDylpStdLib/: libDylpStdLib.vcproj
DyLP/MSVisualStudio/v9/libOsiDylp/: libOsiDylp.vcproj
DyLP/MSVisualStudio/v9alt/: Dylp.sln  DylpUnitTest.vcproj  OsiDylpUnitTest.vcproj  dylp.vsprops  libDylp.def  libDylp.vcproj  libDylpStdLib.vcproj  libOsiDylp.vcproj
DyLP/doc/: Makefile.am  Makefile.in  build_dylpdoc.in  dylp.ps  dylp.tex  intro.tex  makefile.dylpdoc.in  notation.tex  pricing.tex  solutions.tex  statistics.tex
DyLP/doc/Figures/: Makefile.in
DyLP/doc/TexMF/: Makefile.am  Makefile.in
DyLP/doc/TexMF/tex/latex/: loumath.sty
DyLP/doc/TexMF/tex/latex/psnfss/: t1pag.fd
DyLP/doxydoc/: doxygen.conf.in
DyLP/examples/: Makefile.in  README  mpsio.c  odsi+dylp.cpp  osi+dylp.cpp  osi_dylp.c  plain
DyLP/inc/: config_dylp.h.in
DyLP/m4/: ac_dylp_equiv_for_cpp_bool.m4  ac_dylp_fix_cppflags.m4  ac_dylp_options.m4
DyLP/src/Dylp/: Makefile.am  Makefile.in  consys.h  consys_io.c  consys_mathutils.c  consys_scaling.c  consys_utils.c  dy_basis.c  dy_bound.c  dy_cmdint.c  dy_cmdint.h  dy_coldstart.c  dy_conmgmt.c  dy_consys.h  dy_consys_io.c  dy_consys_mathutils.c  dy_consys_scaling.c  dy_consys_utils.c  dy_dual.c  dy_dualmultipivot.c  dy_dualpivot.c  dy_duenna.c  dy_errmsgs.txt  dy_force.c  dy_hotstart.c  dy_options.c  dy_penalty.c  dy_pivreject.c  dy_primal.c  dy_primalmultipivot.c  dy_primalpivot.c  dy_rays.c  dy_scaling.c  dy_setup.c  dy_solutions.c  dy_statistics.c  dy_tableau.c  dy_unscaling.c  dy_varmgmt.c  dy_vector.h  (+16 more)
DyLP/src/DylpStdLib/: DylpConfig.h  Makefile.am  Makefile.in  config_default.h  config_dylp_default.h  dylib_binsrch.c  dylib_bnfrdr.c  dylib_bnfrdr.h  dylib_bnfrdrio.c  dylib_errs.c  dylib_errs.h  dylib_fortran.h  dylib_hash.c  dylib_hash.h  dylib_io.c  dylib_io.h  dylib_keytab.h  dylib_littab.c  dylib_std.h  dylib_strrtns.c  dylib_strrtns.h
DyLP/src/OsiDylp/: Makefile.am  Makefile.in  OsiDylpMessages.cpp  OsiDylpMessages.hpp  OsiDylpPresolve.cpp  OsiDylpSimplex.cpp  OsiDylpSolverInterface.cpp  OsiDylpSolverInterface.hpp  OsiDylpWarmStartBasis.cpp  OsiDylpWarmStartBasis.hpp  osi-dylp-uninstalled.pc.in  osi-dylp.pc.in
DyLP/test/: Makefile.am  Makefile.in  OsiDylpSolverInterfaceTest.cpp  dytest_problems.c  dytest_rays.c  dytest_solutions.c  dytest_tableau.c  osiUnitTest.cpp  unitTest.c
Dylp/: Makefile  Makefile.Dylp  consys.h  consys_io.c  consys_mathutils.c  consys_scaling.c  consys_utils.c  dy_basis.c  dy_bound.c  dy_cmdint.c  dy_cmdint.h  dy_coldstart.c  dy_conmgmt.c  dy_dual.c  dy_dualmultipivot.c  dy_dualpivot.c  dy_duenna.c  dy_errmsgs.txt  dy_force.c  dy_hotstart.c  dy_options.c  dy_penalty.c  dy_pivreject.c  dy_primal.c  dy_primalmultipivot.c  dy_primalpivot.c  dy_scaling.c  dy_setup.c  dy_statistics.c  dy_varmgmt.c  dy_warmstart.c  dylp.c  dylp.h  dylp_io.c  dylp_utils.c  glpinv.c  glpinv.h  glplib.h  glplib1.c  glplib3.c  (+2 more)
MSVisualStudio/v10/: Dylp.sln
MSVisualStudio/v10alt/: DylpUnitTest.vcxproj  OsiDylpUnitTest.vcxproj  (+5 more)
doc/: Makefile.am  Makefile.in  README  accuracy.tex  dynamic.tex  interface.tex  scaling.tex  solutions.tex
doc/TexMF/: Makefile.am  Makefile.in  README
doxydoc/: doxygen.conf.in
examples/: Makefile.in  generic.spc  greenbeb.spc  mpsio.c  odsi+dylp.cpp  osi+dylp.cpp  osi_dylp.c  plain  plain.in
m4/: ac_dylp_equiv_for_cpp_bool.m4  ac_dylp_find_fp_funcs.m4  ac_dylp_fix_cppflags.m4
src/Dylp/: Makefile.am  Makefile.in  dy_basis.c  dy_bound.c  dy_cmdint.c  dy_cmdint.h  dy_coldstart.c  dy_conmgmt.c  dy_consys.h  dy_consys_io.c  dy_consys_mathutils.c  dy_consys_scaling.c  dy_consys_utils.c  dy_dual.c  dy_dualmultipivot.c  dy_dualpivot.c  dy_duenna.c  dy_errmsgs.txt  dy_force.c  dy_hotstart.c  dy_mpsin.c  dy_mpsin.h  dy_options.c  dy_penalty.c  dy_pivreject.c  dy_primal.c  dy_primalmultipivot.c  dy_primalpivot.c  dy_rays.c  dy_scaling.c  dy_setup.c  dy_solutions.c  dy_statistics.c  dy_tableau.c  dy_varmgmt.c  dy_vector.h  dy_vector_utils.c  dy_warmstart.c  dylp.c  dylp.h  (+9 more)
src/DylpStdLib/: DylpConfig.h  Makefile.am  Makefile.in  config.h.in  config_default.h  config_dylp.h.in  config_dylp_default.h  dylib_binsrch.c  dylib_bnfrdr.c  dylib_bnfrdr.h  dylib_errmsgs.c  dylib_errmsgtmplts.c  dylib_errs.c  dylib_errs.h  dylib_io.c  dylib_io.h  dylib_std.h
src/OsiDylp/: Makefile.am  Makefile.in  OsiDylpConfig.h  OsiDylpMessages.cpp  OsiDylpMessages.hpp  OsiDylpPresolve.cpp  OsiDylpSimplex.cpp  OsiDylpSolverInterface.cpp  OsiDylpSolverInterface.hpp  OsiDylpWarmStartBasis.hpp  config_osidylp.h.in  osi-dylp-uninstalled.pc.in  osi-dylp.pc.in
test/: Makefile.am  Makefile.in  OsiDylpSolverInterfaceTest.cpp  dytest_problems.c  dytest_rays.c  dytest_solutions.c  dytest_tableau.c  osiUnitTest.cpp  unitTest.c
trunk/: INSTALL
(+63 files in other folders)
